css/application.css
/* enable html5 in correct way for IE less then 9 */
article, aside, figure, footer, header, nav, div {
    display: block;
}

html {
    height:100%;
    max-height:100%;
}

body {
    font-family: 'Verdana', 'Arial';
    height:100%;
    margin: 0;
    max-height: 100%;
    padding: 0;
    position: relative;

    counter-reset:section;
}

ul {
    margin: 0;
    padding: 0;
}

button {
    background-color: #4292de;
    border: 0;
    color: #FFF;
}


.module {
    background-color: #000;
    bottom: 44px;
    color: #FFF;
    display: none;
    /*height: 100%;*/
    position: absolute;
    top: 0;
    width: 100%;
}

.module a,
.module a:hover,
.module a:visited {
    color: #FFF;
}

/*******************************************************************
 * Map Module
 ********************************************************************/
#map .map-container {
    height: 100%;
}

/** map controls **/
.map-control {
    position: absolute;
}

.map-control.move {
    background-image: url('../img/icons.png');
    border: 0;
    /*border:  1px solid blue;*/
    display: block;
    height: 25px;
    width: 25px;
}

.map-control.move.top,
.map-control.move.bottom {
    left: 49%;
}

.map-control.move.left,
.map-control.move.right {
    top: 48%;
}

.map-control.move.top {
    background-position: 148px 0;
    top: 10px;
}

.map-control.move.bottom {
    background-position: 97px 0;
    bottom: 10px;
}

.map-control.move.left {
    background-position: 200px 0;
    left: 10px;
}

.map-control.move.right {
    background-position: 250px 0;
    right: 10px;
}

/*******************************************************************
 * Bar
 ********************************************************************/
#bar {
    background: #000;
    display: inline-block;
    padding: 10px 0;
    width: 100%;
    text-align: center;

    position: absolute;
    bottom: 0
}

#bar li {
    display: inline-block;
    list-style: none outside none;
}

#bar a {
    background-image: url('../img/icons.png');
    background-repeat: no-repeat;
    display: inline-block;
    height: 24px;
    margin: 0 10px;
    text-indent: -9999px;
    width: 24px;
}

#bar .zoom-in-button {
    background-position: 0 0;
}

#bar .zoom-in-button.disabled {
    background-position: 0 -24px;
}

#bar .list-button {
    background-position: -50px 0;
}

#bar .list-button.disabled {
    background-position: -50px -24px;
}

#bar .refresh-button {
    background-position: -100px 0;
}

#bar .refresh-button.disabled {
    background-position: -100px -24px;
}

#bar .refresh-button.spinning {
    background: url(../img/ico_reload.gif) no-repeat 0 0;
}

#bar .search-button {
    background-position: -150px 0;
}

#bar .search-button.disabled {
    background-position: -150px -24px;
}

#bar .zoom-out-button {
    background-position: -200px 0;
}

#bar .zoom-out-button.disabled {
    background-position: -200px -24px;
}

#bar .map-button {
    background-position: -454px 0;
}

#bar .map-button.disabled {
    background-position: -454px -24px;
}

/**************************************************
 * Search Module
 *************************************************/
h1 {
    background: url(../img/app-ico.png) no-repeat;
    font-size: 2em;
    font-style: italic;
    line-height: 60px;
    margin: 30px auto;
    padding-left: 60px;
    width: 230px;
}

fieldset {
    border: 0;
    padding-top: 30px;
}

legend {
    font-size: 24px;
    padding-top: 28px;
}

fieldset label {
    font-weight: bold;
}

form {
    border-top: 2px solid #373a3f;
    width: 90%;
    margin: 0 auto;
}

#search-gps-status {
    color: #4292de;
    font-style: italic;
    min-height: 40px;
}

.last-row {
    margin-top: 20px;
    padding: 10px;
    font-size: 1.1em;
}

/**************************************************
 * List Module
 *************************************************/
#list {
    overflow-y: auto;
}

#list .items li {
    border-bottom: 1px solid #FFF;
    /*padding: 10px;*/
    padding: 10px 10px 14px 10px;
    position: relative;
}

#list .items li:before {
    counter-increment:section;
    content: counter(section) ". ";
}

#list .items a {
    text-decoration: none;
}

#list .items a.info {
    display: inline-block;
    width: 90%;
}

#list .items a.arrow {
    background: url('../img/icons.png') -250px 0 no-repeat;
    display: inline-block;
    float: right;
    height: 25px;
    position: absolute;
    right: 0;
    width: 40px;
}

